--- a/templates/Functions.html
+++ b/templates/Functions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Statics Functions</title>
+    <title>Statistics Functions</title>
     <style>
 .button {
   background-color: black;
