--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>All Images</title>
-    <h1 align="center">Images Statics</h1>
-    <h5 align="center">Click on image to view statics</h5>
+    <h1 align="center">Images Statistics</h1>
+    <h5 align="center">Click on image to view statistics</h5>
 </head>
 <body style="background-color:powderblue;">
     <hr color="black">
