--- a/templates/Error.html
+++ b/templates/Error.html
@@ -25,6 +25,6 @@
 <h1>404 Error</h1> The requested url was not found on this server : <B>{{msg}}</B>
 <hr color="black">
 <button onclick="location.href='http://localhost:5000/'" type="button" class="button" >
-        Back</button>
+        Home Page</button>
 </body>
 </html>
