--- a/templates/Functions.html
+++ b/templates/Functions.html
@@ -38,6 +38,12 @@
 <button  onclick="myFunction()"  type="button" class="button">
          Percentile</button></th>
         <th>
+            <style>
+            input[type=number]::-webkit-inner-spin-button {
+    opacity: 1
+}
+
+</style>
 <input type="number"  id="myText" value="50" min="0" max="100" class="button"></th>
     </tr>
 </table>
