--- a/templates/Statistics.html
+++ b/templates/Statistics.html
@@ -25,6 +25,9 @@
 <h1 align="center">
 {{value}}
 </h1>
+<center>
+Rendered in {{ g.request_time() }}
+    </center>
 <hr color="black">
 <button onclick="location.href='http://localhost:5000/functions/{{img_name}}'" type="button" class="button" >
         Back</button>
